--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://jun-ny.github.io/react-homework",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -37,6 +38,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "https://jun-ny.github.io/react-homework"
+  }
+  
 }
